--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="imageview_placeholder">ImageView placeholder</string>
+    <string name="app_news_slogan">元圆之迹，一切有迹可循</string>
 </resources>
